# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml
brain_games/: __init__.py  cli.py  even.py
brain_games/scripts/: __init__.py  brain_even.py  brain_games.py
