[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vladpurga <vladpurga@my.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

